# BookLibraryService

./: Makefile  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  requirements.txt  settings.py
api/: routers.py
api/core/: base_service.py  config.py  dependencies.py  exceptions.py
api/core/dependencies/: repositories.py  role_required.py  services.py
api/v1/authors/: handlers.py  repository.py  schemas.py  service.py
api/v1/book_copy/: handlers.py  repository.py  schemas.py  service.py
api/v1/books/: handlers.py  repository.py  schemas.py  service.py
db/: base_repository.py  models.py  session.py  test.py
db/migrations/: env.py
db/migrations/versions/: 1561a4a2cc8b_make_tables.py  40032e55006b_create_tables.py  93d334513f5b_add_borrowed_date_to_book_copy.py  cff60108b01e_create_tables.py  d9ba80028dcd_change_field_desc_to_description.py
docker_compose/: docker-compose-local.yaml
tests/: alembic.ini  conftest.py  sql_queries.py  testDAL.py  utils_for_tests.py
tests/test_handlers/test_books/: test_create_book.py  test_delete_book.py  test_get_book.py  test_update_book.py
utils/: book_conditions.py  book_statuses.py  jwt.py  roles.py
